Add input file name

--- a/hello_ailia.ipynb
+++ b/hello_ailia.ipynb
@@ -29,28 +29,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_eis29O5Uzl2",
-        "outputId": "98f795a8-5669-4ab3-94cc-e8092e607789"
+        "outputId": "4710f524-5990-4456-81b1-433ae34d6472"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: ailia in /usr/local/lib/python3.10/dist-packages (1.3.0.3)\n",
+            "Collecting ailia\n",
+            "  Downloading ailia-1.3.0.5-py3-none-any.whl (47.7 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m47.7/47.7 MB\u001b[0m \u001b[31m13.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: ailia\n",
+            "Successfully installed ailia-1.3.0.5\n",
             "Cloning into 'ailia-models'...\n",
-            "remote: Enumerating objects: 3097, done.\u001b[K\n",
-            "remote: Counting objects: 100% (3097/3097), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (2657/2657), done.\u001b[K\n",
-            "remote: Total 3097 (delta 485), reused 2123 (delta 369), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (3097/3097), 622.63 MiB | 30.20 MiB/s, done.\n",
-            "Resolving deltas: 100% (485/485), done.\n",
-            "Updating files: 100% (2836/2836), done.\n"
+            "remote: Enumerating objects: 3098, done.\u001b[K\n",
+            "remote: Counting objects: 100% (3098/3098), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (2661/2661), done.\u001b[K\n",
+            "remote: Total 3098 (delta 486), reused 2180 (delta 366), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (3098/3098), 622.77 MiB | 28.71 MiB/s, done.\n",
+            "Resolving deltas: 100% (486/486), done.\n",
+            "Updating files: 100% (2837/2837), done.\n"
           ]
         }
       ],
@@ -61,18 +65,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JuB7q1RsVcIb",
-        "outputId": "85f962da-42d3-4cb5-f6a5-24136eed9203"
+        "outputId": "b14b8ec0-8802-4960-b046-6f4ca78192b4"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Requirement already satisfied: opencv-python in /usr/local/lib/python3.10/dist-packages (4.8.0.76)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (1.25.2)\n"
@@ -88,13 +92,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "P5MwEaroVpy9",
-        "outputId": "20e7b4d9-f67a-4dbd-f6a4-fdaf40d6e3cf"
+        "outputId": "88876151-1466-45ba-8b22-525cc9a2db5a"
       },
       "outputs": [
         {
@@ -105,8 +109,16 @@
             " INFO arg_utils.py (158) : env_id updated to 0\n",
             " INFO arg_utils.py (163) : env_id: 0\n",
             " INFO arg_utils.py (166) : CPU\n",
+            " INFO model_utils.py (74) : Downloading onnx file... (save path: yolox_s.opt.onnx)\n",
+            " INFO model_utils.py (80) : \n",
+            "\n",
+            " INFO model_utils.py (82) : Downloading prototxt file... (save path: yolox_s.opt.onnx.prototxt)\n",
+            " INFO model_utils.py (88) : \n",
+            "\n",
             " INFO model_utils.py (89) : ONNX file and Prototxt file are prepared!\n",
-            " INFO license.py (77) : Welcome to ailia! The ailia SDK is a commercial library. Under certain conditions, it can be used free of charge; however, it is principally paid software. For details, please refer to https://ailia.ai/license/ .\n",
+            " INFO license.py (113) : Download license file for ailia SDK.\n",
+            " INFO license.py (113) : Download license file for ailia SDK.\n",
+            " INFO license.py (76) : Welcome to ailia! The ailia SDK is a commercial library. Under certain conditions, it can be used free of charge; however, it is principally paid software. For details, please refer to https://ailia.ai/license/ .\n",
             " INFO yolox.py (137) : Start inference...\n",
             "object_count=20\n",
             "+ idx=0\n",
@@ -255,19 +267,19 @@
         }
       ],
       "source": [
-        "!cd ailia-models/object_detection/yolox && python3 yolox.py"
+        "!cd ailia-models/object_detection/yolox && python3 yolox.py -i input.jpg"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 443
         },
         "id": "WD4Tm3xcYQDR",
-        "outputId": "913c5e7b-8067-4591-fe68-e5ca2c91b0f9"
+        "outputId": "c609c2ef-cdac-479c-a411-29791d0e2eea"
       },
       "outputs": [
         {
@@ -279,7 +291,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 49
+          "execution_count": 4
         }
       ],
       "source": [
