Change install command

--- a/audio_processing/gpt-sovits/colab.ipynb
+++ b/audio_processing/gpt-sovits/colab.ipynb
@@ -39,8 +39,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting git+https://github.com/axinc-ai/ailia-sdk-beta.git\n",
             "  Cloning https://github.com/axinc-ai/ailia-sdk-beta.git to /tmp/pip-req-build-_z86hk8c\n",
@@ -66,7 +66,7 @@
         }
       ],
       "source": [
-        "!pip3 install git+https://github.com/axinc-ai/ailia-sdk-beta.git\n",
+        "!pip3 install ailia\n",
         "!git clone --branch gpt-sovits --depth 1 https://github.com/axinc-ai/ailia-models"
       ]
     },
@@ -82,8 +82,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: opencv-python in /usr/local/lib/python3.10/dist-packages (4.8.0.76)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (1.25.2)\n",
@@ -163,12 +163,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "音声合成を行います。--ref_audioに参照する声色のファイル、--ref_textに声色のファイルで喋っている内容、-iに喋らせたい内容を指定します。"
-      ],
       "metadata": {
         "id": "GoX2NspZvXrR"
-      }
+      },
+      "source": [
+        "音声合成を行います。--ref_audioに参照する声色のファイル、--ref_textに声色のファイルで喋っている内容、-iに喋らせたい内容を指定します。"
+      ]
     },
     {
       "cell_type": "code",
@@ -182,8 +182,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             " INFO arg_utils.py (13) : Start!\n",
             " INFO arg_utils.py (163) : env_id: 0\n",
@@ -251,11 +251,7 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "<IPython.lib.display.Audio object>"
-            ],
             "text/html": [
               "\n",
               "                <audio  controls=\"controls\" >\n",
@@ -263,10 +259,14 @@
               "                    Your browser does not support the audio element.\n",
               "                </audio>\n",
               "              "
+            ],
+            "text/plain": [
+              "<IPython.lib.display.Audio object>"
             ]
           },
+          "execution_count": 8,
           "metadata": {},
-          "execution_count": 8
+          "output_type": "execute_result"
         }
       ],
       "source": [
